--- a/template.html
+++ b/template.html
@@ -70,14 +70,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <button class="close-toggler" type="button" data-toggle="offcanvas"> <span><i class="fas fa-times-circle" aria-hidden="true"></i></span> </button>
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item"> <a class="nav-link smoothscroll" href="#home">Home <span class="sr-only">(current)</span></a> </li>
-              <li class="nav-item"><a class="nav-link smoothscroll" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link smoothscroll" href="#practice">Practice Areas</a></li>
+                <li class="nav-item"> <a class="nav-link smoothscroll" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
+                <li class="nav-item"><a class="nav-link smoothscroll" href="#about">About</a></li>
+                <div class="dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" type="button" data-toggle="dropdown">Practice Areas</a>
+                    <ul class="dropdown-menu">
+                                       
+                        <a href="#" style="color:#BF9257" class="nav-link"><b>Small Claims Court</b></a>
+                        <a href="#" style="color:#BF9257" class="nav-link"><b>Provencial Offences</b></a>
+                        <a href="#" style="color:#BF9257" class="nav-link"><b>Highway Traffic Act and CVOR</b></a>
+                        <a href="#" style="color:#BF9257" class="nav-link"><b>On Summary Conviction Offences</b></a>
+                        <a href="#" style="color:#BF9257" class="nav-link"><b>Before Administrative Tribunals</b></a>
+                               
+                    </ul>
+                </div>
               <!--
               <li class="nav-item"><a class="nav-link smoothscroll" href="#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link smoothscroll" href="#blog">Blog</a></li>
               -->
-              <li class="nav-item"><a class="nav-link smoothscroll" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="#contact">Contact</a></li>
             </ul>
             <div class="quote-btn"><a href="#">Get A Quote</a></div>
           </div>
@@ -87,76 +98,6 @@
   </div>
 </div>
 <!--Header End--> 
-
-<!-- Video Banner start -->
-
-<div class="video">
-  <div class="videohover hero-wrapper videoWrp">
-    <div class="hero-image" style="background-image: url('images/banner2.jpg')">
-      <video autoplay="" muted="" poster="" id="bgvid" loop="">
-        <source src="videos/atlantalawyer.mp4" type="video/mp4">
-      </video>
-    </div>
-  </div>
-  <div class="slider-wrap staticSlide videoWrp" id="home">
-    <div class="container">
-      <div class="banner-info videoslider">
-        <b><p style="font-size:40px">David A. Reid</p>
-        <p style="font-size:40px">Paralegal Associate</p>
-        <br>
-        <p style="font-size:40px">Browne & Associates</p>
-        <p style="font-size:30px">Legal Services</p></b>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Video Banner End --> 
-
-<!-- Lawyer Categories Start -->
-<div class="lawyer_categories">
-  <div class="container-fluid">
-    <ul class="unorderList owl-carousel lawyerList">
-      <li class="item">
-        <div class="lawyer_sec">
-          <div class="iconWrp"><i class="fas fa-headphones"></i></div>
-          <div class="lawyer_info">
-            <h3>Free Consultation</h3>
-            <!--<p>Lorem ipsum dolor sit</p>-->
-          </div>
-        </div>
-      </li>
-      <li class="item">
-        <div class="lawyer_sec">
-          <div class="iconWrp"><i class="fas fa-shield-alt"></i></div>
-          <div class="lawyer_info">
-            <h3>Insurance defence</h3>
-            <!--<p>Lorem ipsum dolor sit</p>-->
-          </div>
-        </div>
-      </li>
-      <li class="item">
-        <div class="lawyer_sec">
-          <div class="iconWrp"><i class="fas fa-user"></i></div>
-          <div class="lawyer_info">
-            <h3>Expert Paralegals</h3>
-            <!--<p>Lorem ipsum dolor sit</p>-->
-          </div>
-        </div>
-      </li>
-      <li class="item">
-        <div class="lawyer_sec">
-          <div class="iconWrp"><i class="fas fa-hand-holding-usd"></i></div>
-          <div class="lawyer_info">
-            <h3>Financial Law</h3>
-            <!--<p>Lorem ipsum dolor sit</p>-->
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
-<!-- Lawyer Categories--> 
 
 <!-- About Start -->
 <div class="about-wrap" id="about">
@@ -589,12 +530,12 @@
       <div class="col-lg-2 col-md-6">
         <h3>Quick links</h3>
         <ul class="footer-links">
-          <li> <a href="#.">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li> <a href="index.html">Home</a></li>
+          <li><a href="#.">About Us</a></li>
           <li><a href="#.">Practice Areas</a></li>
           <li><a href="#.">FAQs </a></li>
           <li><a href="#.">Blog </a></li>
-          <li><a href="contact.html">Contact </a></li>
+          <li><a href="#.">Contact </a></li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-6">
