--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
   <div class="slider-wrap staticSlide videoWrp" id="home">
     <div class="container">
       <div class="banner-info videoslider">
-        <b><p style="font-size:40px">David A. Reid</p>
-        <p style="font-size:40px">Paralegal Associate</p>
+        <b><p style="font-size:3vw;">David A. Reid</p>
+        <p style="font-size:3vw;">Paralegal Associate</p>
         <br>
-        <p style="font-size:40px">Browne & Associates</p>
-        <p style="font-size:30px">Legal Services</p></b>
+        <p style="font-size:3vw;">Browne & Associates</p>
+        <p style="font-size:3vw;">Legal Services</p></b>
       </div>
     </div>
   </div>
@@ -485,7 +485,7 @@
           </form>
         </div>
       </div>
-      
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <div class="col-lg-6">
         <div class="contact_info">
           <div class="title">
