added extra pages

--- a/template.html
+++ b/template.html
@@ -76,11 +76,11 @@
                     <a href="#" class="nav-link dropdown-toggle" type="button" data-toggle="dropdown">Practice Areas</a>
                     <ul class="dropdown-menu">
                                        
-                        <a href="#" style="color:#BF9257" class="nav-link"><b>Small Claims Court</b></a>
-                        <a href="#" style="color:#BF9257" class="nav-link"><b>Provencial Offences</b></a>
-                        <a href="#" style="color:#BF9257" class="nav-link"><b>Highway Traffic Act and CVOR</b></a>
-                        <a href="#" style="color:#BF9257" class="nav-link"><b>On Summary Conviction Offences</b></a>
-                        <a href="#" style="color:#BF9257" class="nav-link"><b>Before Administrative Tribunals</b></a>
+                        <a href="small-claims-court.html" style="color:#BF9257" class="nav-link"><b>Small Claims Court</b></a>
+                        <a href="provincial-offences.html" style="color:#BF9257" class="nav-link"><b>Provincial Offences</b></a>
+                        <a href="highway-traffic-act-and-cvor.html" style="color:#BF9257" class="nav-link"><b>Highway Traffic Act and CVOR</b></a>
+                        <a href="on-summary-conviction-offences.html" style="color:#BF9257" class="nav-link"><b>On Summary Conviction Offences</b></a>
+                        <a href="before-administrative-tribunals.html" style="color:#BF9257" class="nav-link"><b>Before Administrative Tribunals</b></a>
                                
                     </ul>
                 </div>
@@ -112,13 +112,13 @@
             <!--<p>About Us</p>-->
             <h1>Benefits of Hiring A Paralegal</h1>
           </div>
-          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegal, as a whole, on average, charge much less than other legal service providers. 
+          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
           Therefore, making the court systems accessible to all, rather than that of just the upper class.</p>
 
           <p>The education that Paralegals receive is specific to the areas of law they are allowed to practice. Paralegals are unable to practice all types of law, for this reason their education is fine 
           tuned to the areas they are allowed to service. Thus, they have a greater knowledge and understanding of the law they are going to practice once they are finished their educational program.</p>
 
-          <p>Paralegals are comparable to lawyers, in the sense that we are both regulated by the same law and principles. We are both required to meet specific standards of learning, professional 
+          <p>Paralegals are comparable to lawyers, in the sense that we both are regulated by the same law and principles. We both are required to meet specific standards of learning, professional 
           competence, and adhere to a professional conduct that is appropriate for the legal services we provide.</p>
 
           <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
@@ -331,9 +331,9 @@
     <div class="title">
       <h1>Need Legal Advice?</h1>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis, quam non suscipit tincidunt, ex urna interdum odio, at convallis enim est et mi. Aliquam pharetra fringilla turpis, id luctus tellus porttitor eget.</p>
+    <p style="font-size:25px">David A. Reid Paralegal Associate <br> Browne & Associates Legal Services</p>
     <div class="callText">Call us! we are available Monday - Friday: 9:00 - 6:00</div>
-    <div class="phonewrp"><a href="#">(905) 688-5598</a></div>
+    <div class="phonewrp"><a href="tel:9056885598">(905) 688-5598</a></div>
   </div>
 </div>
 <!-- Advice End --> 
@@ -519,7 +519,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="footer_logo"><img class="footer-default" src="images/atlantalawyes_logo_white.png" alt=""></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis aliquet lacus sit amet tincidunt. Pellentesque porttitor diam malesuada erat.</p>
+        <p style="font-size:20px">Browne & Associates Legal Services<br><br><br><br><br></p>
         <ul class="unorderList social_media">
           <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -531,11 +531,10 @@
         <h3>Quick links</h3>
         <ul class="footer-links">
           <li> <a href="index.html">Home</a></li>
-          <li><a href="#.">About Us</a></li>
-          <li><a href="#.">Practice Areas</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="#practice">Practice Areas</a></li>
           <li><a href="#.">FAQs </a></li>
-          <li><a href="#.">Blog </a></li>
-          <li><a href="#.">Contact </a></li>
+          <li><a href="contact.html">Contact </a></li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-6">
