--- a/small-claims-court.html
+++ b/small-claims-court.html
@@ -71,7 +71,7 @@
             <button class="close-toggler" type="button" data-toggle="offcanvas"> <span><i class="fas fa-times-circle" aria-hidden="true"></i></span> </button>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"> <a class="nav-link smoothscroll" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
-                <li class="nav-item"> <a class="nav-link smoothscroll" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link smoothscroll" href="about.html">About</a></li>
                 <div class="dropdown">
                     <a href="#" class="nav-link dropdown-toggle" type="button" data-toggle="dropdown">Practice Areas</a>
                     <ul class="dropdown-menu">
@@ -98,7 +98,234 @@
   </div>
 </div>
 <!--Header End--> 
-<br>
+
+<!-- About Start -->
+<div class="about-wrap" id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5">
+        <div class="aboutImg"><img src="images/lawyerabout.jpg" alt=""></div>
+      </div>
+      <div class="col-lg-7">
+        <div class="about_box">
+          <div class="title">
+            <!--<p>About Us</p>-->
+            <h1>Benefits of Hiring A Paralegal</h1>
+          </div>
+          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
+          Therefore, making the court systems accessible to all, rather than that of just the upper class.</p>
+
+          <p>The education that Paralegals receive is specific to the areas of law they are allowed to practice. Paralegals are unable to practice all types of law, for this reason their education is fine 
+          tuned to the areas they are allowed to service. Thus, they have a greater knowledge and understanding of the law they are going to practice once they are finished their educational program.</p>
+
+          <p>Paralegals are comparable to lawyers, in the sense that we both are regulated by the same law and principles. We both are required to meet specific standards of learning, professional 
+          competence, and adhere to a professional conduct that is appropriate for the legal services we provide.</p>
+
+          <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
+          knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
+          <br><br><br><br><br>
+          </div>
+      </div>
+    </div>
+    
+    <!--Counter Start-->
+    <!--
+    <div id="counter">
+      <div class="row">
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-user"></i></div>
+            <span class="counter-number" data-from="1" data-to="1824" data-speed="2000">824</span> <span class="counter-text">Trusted Client</span> </div>
+        </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-briefcase"></i></div>
+            <span class="counter-number" data-from="1" data-to="5598" data-speed="5000">98</span> <span class="counter-text">Successful Cases</span> </div>
+        </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-award"></i></div>
+            <span class="counter-number" data-from="1" data-to="6574" data-speed="6000">74</span> <span class="counter-text">Honored Awards</span> </div>
+        </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-flag-checkered"></i></div>
+            <span class="counter-number" data-from="1" data-to="34425" data-speed="10000">25</span> <span class="counter-text">Experience</span> </div>
+        </div>
+      </div>
+    </div>
+    -->
+    <!--Counter End--> 
+    
+  </div>
+</div>
+<!-- About End --> 
+
+<!-- Law Start -->
+<div class="law-wrap">
+  <div class="lawflex">
+    <div class="row">
+      <div class="col-lg-6 offset-6">
+        <div class="law_box">
+          <div class="title">
+            <h1>Criminal Convictions <span>Summary Offenses</span></h1>
+          </div>
+          <p>Criminal charges or criminal matters consist of very serious crimes that should not be taken lightly. If convicted of a criminal offence, there is the possibility that you could go to 
+          jail or face a substantial fine. As a Paralegal, I’m able to deal with criminal matters (Summary Convictions), so long as the maximum term of imprisonment does not exceed six months and 
+          $5000.00 in fines. </p>
+          <ul class="tick">
+            <li>Theft of $5,000.00 or under</li>
+            <li>Breach of Recognizance</li>
+            <li>Dangerous Driving Assault</li>
+            <li>Failure to comply with probation order</li>
+            <li>Operating while Impaired</li>
+            <li>Mischief</li>
+            <li>Assault</li>
+            <li>Harassing phone calls</li>
+            <li>Other</li>
+          </ul>
+          <p>However, for indictable offenses, I am unable to represent you in court but I work closely with many different lawyers, in many different areas of law. I would be more than willing to 
+          refer you to one of my trusted lawyers. Knowing that being charged with a criminal matter can have a considerable impact upon you and/or your family, I will try to mitigate the impact by 
+          placing you in contact with the lawyer you need to resolve your matter in a quick and timely manner.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Law End -->
+<!--
+<div class="testimonials-wrap" id="testimonials">
+    <div class="container">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+</div>
+-->
+<!-- Testimonials Start -->
+<!--
+<div class="testimonials-wrap" id="testimonials">
+  <div class="container">
+    <div class="title">
+      <p>Testimoinials</p>
+      <h1> What Our Clients Say </h1>
+    </div>
+    <ul class="owl-carousel testimonials_list unorderList">
+      <li class="item">
+        <div class="testimonials_sec">
+          <div class="clientImg"><img src="images/jame_img.jpg" alt=""></div>
+          <h3>Jame Gordon</h3>
+          <ul class="unorderList starWrp">
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+          </ul>
+          <p>Morbi viverra mattis velit, sit amet accumsan nisi tempor in. Ut id nisl egestas risus facilisis maximus. Aenean ullamcorper enim massa, id gravida erat viverra sed. Phasellus dapibus dolor tellus, ut sodales erat venenatis scelerisque. Cras ultrices justo vitae libero blandit, ac placerat orci tempus. Sed vitae laoreet ipsum, non rutrum nulla. Phasellus vel interdum metus. Morbi et lorem convallis, scelerisque metus.</p>
+        </div>
+      </li>
+      <li class="item">
+        <div class="testimonials_sec">
+          <div class="clientImg"><img src="images/jame_img.jpg" alt=""></div>
+          <h3>Jame Gordon</h3>
+          <ul class="unorderList starWrp">
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+          </ul>
+          <p>Morbi viverra mattis velit, sit amet accumsan nisi tempor in. Ut id nisl egestas risus facilisis maximus. Aenean ullamcorper enim massa, id gravida erat viverra sed. Phasellus dapibus dolor tellus, ut sodales erat venenatis scelerisque. Cras ultrices justo vitae libero blandit, ac placerat orci tempus. Sed vitae laoreet ipsum, non rutrum nulla. Phasellus vel interdum metus. Morbi et lorem convallis, scelerisque metus.</p>
+        </div>
+      </li>
+      <li class="item">
+        <div class="testimonials_sec">
+          <div class="clientImg"><img src="images/jame_img.jpg" alt=""></div>
+          <h3>Jame Gordon</h3>
+          <ul class="unorderList starWrp">
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+          </ul>
+          <p>Morbi viverra mattis velit, sit amet accumsan nisi tempor in. Ut id nisl egestas risus facilisis maximus. Aenean ullamcorper enim massa, id gravida erat viverra sed. Phasellus dapibus dolor tellus, ut sodales erat venenatis scelerisque. Cras ultrices justo vitae libero blandit, ac placerat orci tempus. Sed vitae laoreet ipsum, non rutrum nulla. Phasellus vel interdum metus. Morbi et lorem convallis, scelerisque metus.</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+-->
+<!-- Testimonials End --> 
+
+<!-- Advice Start -->
+<div class="advice-wrap">
+  <div class="container">
+    <div class="title">
+      <h1>Need Legal Advice?</h1>
+    </div>
+    <p style="font-size:25px">David A. Reid Paralegal Associate <br> Browne & Associates Legal Services</p>
+    <div class="callText">Call us! we are available Monday - Friday: 9:00 - 6:00</div>
+    <div class="phonewrp"><a href="tel:9056885598">(905) 688-5598</a></div>
+  </div>
+</div>
+<!-- Advice End --> 
+<!-- 
+<div class="blog-wrap" id="blog">
+    <div class="container">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+</div>
+-->
+<!-- blog start -->
+<!--
+<div class="blog-wrap" id="blog">
+  <div class="container">
+    <div class="title">
+      <h1>Our Blog</h1>
+    </div>
+    <ul class="row blog-service">
+      <li class="col-lg-4 col-md-6">
+        <div class="blog_sec">
+          <div class="date">22 <span>Aug</span></div>
+          <div class="blog-image"><img src="images/blog01.jpg" alt="">
+            <div class="overlay"></div>
+          </div>
+          <div class="blog-detail">
+            <h3><a href="#">Morbi viverra mattis</a></h3>
+            <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="blog_sec">
+          <div class="date">22 <span>Aug</span></div>
+          <div class="blog-image"><img src="images/blog02.jpg" alt="">
+            <div class="overlay"></div>
+          </div>
+          <div class="blog-detail">
+            <h3><a href="#">Nullam lacus vulputate</a></h3>
+            <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="blog_sec">
+          <div class="date">22 <span>Aug</span></div>
+          <div class="blog-image"><img src="images/blog03.jpg" alt="">
+            <div class="overlay"></div>
+          </div>
+          <div class="blog-detail">
+            <h3><a href="#">Morbi erat nisi, facilisis</a></h3>
+            <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <div class="view_btn readmore"><a href="blog_grid.html">View All Blog</a></div>
+  </div>
+</div>
+-->
+<!-- blog end --> 
 
 <!-- Contact Start -->
 <div class="contact-wrap" id="contact">
