fixed for phone

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <ul class="navbar-nav mr-auto">
               <li class="nav-item"> <a class="nav-link smoothscroll" href="#home">Home <span class="sr-only">(current)</span></a> </li>
               <li class="nav-item"><a class="nav-link smoothscroll" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link smoothscroll" href="#practice">Practice Areas</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="practicearea.html">Practice Areas</a></li>
               <!--
               <li class="nav-item"><a class="nav-link smoothscroll" href="#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link smoothscroll" href="#blog">Blog</a></li>
