--- a/practicearea.html
+++ b/practicearea.html
@@ -71,8 +71,8 @@
             <button class="close-toggler" type="button" data-toggle="offcanvas"> <span><i class="fas fa-times-circle" aria-hidden="true"></i></span> </button>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"> <a class="nav-link smoothscroll" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
-                <li class="nav-item"> <a class="nav-link smoothscroll" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link smoothscroll" href="practicearea.html">Practice Areas</a></li>
+                <li class="nav-item"><a class="nav-link smoothscroll" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="#home">Practice Areas</a></li>
               <!--
               <li class="nav-item"><a class="nav-link smoothscroll" href="#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link smoothscroll" href="#blog">Blog</a></li>
@@ -88,35 +88,136 @@
 </div>
 <!--Header End--> 
 
-<!-- About Start -->
-<div class="about-wrap" id="about">
+<!-- Icons Start -->
+<div class="practice-wrap practicearea_sec" id="practice">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-5">
-        <div class="aboutImg"><img src="images/lawyerabout.jpg" alt=""></div>
-      </div>
-      <div class="col-lg-7">
-        <div class="about_box">
-          <div class="title">
-            <!--<p>About Us</p>-->
-            <h1>Benefits of Hiring A Paralegal</h1>
+    <div class="title">
+      <h1>Our Practice Areas</h1>
+    </div>
+    <ul class="row unorderList">
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/business_law.png" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="small-claims-court.html"><b>Small Claims Court</b></a></h3>
+            <br> <br>
           </div>
-          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
-          Therefore, making the court systems accessible to all, rather than that of just the upper class.</p>
-
-          <p>The education that Paralegals receive is specific to the areas of law they are allowed to practice. Paralegals are unable to practice all types of law, for this reason their education is fine 
-          tuned to the areas they are allowed to service. Thus, they have a greater knowledge and understanding of the law they are going to practice once they are finished their educational program.</p>
-
-          <p>Paralegals are comparable to lawyers, in the sense that we both are regulated by the same law and principles. We both are required to meet specific standards of learning, professional 
-          competence, and adhere to a professional conduct that is appropriate for the legal services we provide.</p>
-
-          <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
-          knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
-          <br><br><br><br><br>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/real_estateImg.jpg" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="provincial-offences.html"><b>Provincial Offences</b></a></h3>
+             <br> <br>
           </div>
-      </div>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/familyImg.jpg" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="highway-traffic-act-and-cvor.html"><b>Highway Traffic Act and CVOR</b></a></h3>
+            <p></p>
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/civilImg.png" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="on-summary-conviction-offences.html"><b>On Summary Conviction Offences</b></a></h3>
+            <p></p>
+          </div>
+        </div>
+      </li>
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/educationImg.jpg" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="before-administrative-tribunals.html"><b>Before Administrative Tribunals</b></a></h3>
+          </div>
+        </div>
+      </li>
+      <!--
+      <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/injuryImg.jpg" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="#">PERSONAL INJURY</a></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur elit. In iaculis, quam non suscipit tincidunt, ex urna interdum odio...</p>
+          </div>
+        </div>
+      </li>
+      -->
+    </ul>
+  </div>
+</div>
+<!-- Icons End --> 
+
+<!--
+<div class="testimonials-wrap" id="testimonials">
+    <div class="container">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
 </div>
+-->
+<!-- Testimonials Start -->
+<!--
+<div class="testimonials-wrap" id="testimonials">
+  <div class="container">
+    <div class="title">
+      <p>Testimoinials</p>
+      <h1> What Our Clients Say </h1>
+    </div>
+    <ul class="owl-carousel testimonials_list unorderList">
+      <li class="item">
+        <div class="testimonials_sec">
+          <div class="clientImg"><img src="images/jame_img.jpg" alt=""></div>
+          <h3>Jame Gordon</h3>
+          <ul class="unorderList starWrp">
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+          </ul>
+          <p>Morbi viverra mattis velit, sit amet accumsan nisi tempor in. Ut id nisl egestas risus facilisis maximus. Aenean ullamcorper enim massa, id gravida erat viverra sed. Phasellus dapibus dolor tellus, ut sodales erat venenatis scelerisque. Cras ultrices justo vitae libero blandit, ac placerat orci tempus. Sed vitae laoreet ipsum, non rutrum nulla. Phasellus vel interdum metus. Morbi et lorem convallis, scelerisque metus.</p>
+        </div>
+      </li>
+      <li class="item">
+        <div class="testimonials_sec">
+          <div class="clientImg"><img src="images/jame_img.jpg" alt=""></div>
+          <h3>Jame Gordon</h3>
+          <ul class="unorderList starWrp">
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+          </ul>
+          <p>Morbi viverra mattis velit, sit amet accumsan nisi tempor in. Ut id nisl egestas risus facilisis maximus. Aenean ullamcorper enim massa, id gravida erat viverra sed. Phasellus dapibus dolor tellus, ut sodales erat venenatis scelerisque. Cras ultrices justo vitae libero blandit, ac placerat orci tempus. Sed vitae laoreet ipsum, non rutrum nulla. Phasellus vel interdum metus. Morbi et lorem convallis, scelerisque metus.</p>
+        </div>
+      </li>
+      <li class="item">
+        <div class="testimonials_sec">
+          <div class="clientImg"><img src="images/jame_img.jpg" alt=""></div>
+          <h3>Jame Gordon</h3>
+          <ul class="unorderList starWrp">
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+            <li><i class="fas fa-star"></i></li>
+          </ul>
+          <p>Morbi viverra mattis velit, sit amet accumsan nisi tempor in. Ut id nisl egestas risus facilisis maximus. Aenean ullamcorper enim massa, id gravida erat viverra sed. Phasellus dapibus dolor tellus, ut sodales erat venenatis scelerisque. Cras ultrices justo vitae libero blandit, ac placerat orci tempus. Sed vitae laoreet ipsum, non rutrum nulla. Phasellus vel interdum metus. Morbi et lorem convallis, scelerisque metus.</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+-->
+<!-- Testimonials End --> 
 
 <!-- Advice Start -->
 <div class="advice-wrap">
