--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="banner-info videoslider">
         <b><p style="font-size:3vw;">David A. Reid Paralegal Associate</p>
         <br>
-        <p style="font-size:3vw;">Browne & Associates Legal Services</p></b>
+        <p style="font-size:3vw;">Browne & Associates Legal Services lol</p></b>
       </div>
     </div>
   </div>
