--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
       <div class="banner-info videoslider">
         <b><p style="font-size:3vw;">David A. Reid Paralegal Associate</p>
         <br>
-        <p style="font-size:3vw;">Browne & Associates Legal Services lol</p></b>
+        <p style="font-size:3vw;">Browne & Associates Legal Services</p></b>
       </div>
     </div>
   </div>
 </div>
 <!-- Video Banner End --> 
-
 <!-- Lawyer Categories Start -->
 <div class="lawyer_categories">
   <div class="container-fluid">
     <ul class="unorderList owl-carousel lawyerList">
       <li class="item">
+      <br>
         <div class="lawyer_sec">
           <div class="iconWrp"><i class="fas fa-headphones"></i></div>
           <div class="lawyer_info">
@@ -124,6 +124,7 @@
         </div>
       </li>
       <li class="item">
+      <br>
         <div class="lawyer_sec">
           <div class="iconWrp"><i class="fas fa-shield-alt"></i></div>
           <div class="lawyer_info">
@@ -133,6 +134,7 @@
         </div>
       </li>
       <li class="item">
+      <br>
         <div class="lawyer_sec">
           <div class="iconWrp"><i class="fas fa-user"></i></div>
           <div class="lawyer_info">
