--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
   <div class="slider-wrap staticSlide videoWrp" id="home">
     <div class="container">
       <div class="banner-info videoslider">
-        <b><p style="font-size:3vw;">David A. Reid Paralegal Associate</p>
+        <h1>David A. Reid Paralegal Associate</h1>
         <br>
-        <p style="font-size:3vw;">Browne & Associates Legal Services</p></b>
+        <h1>Browne & Associates Legal Services</h1>
       </div>
     </div>
   </div>
