--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="banner-info videoslider">
         <h1>David A. Reid Paralegal Associate</h1>
         <br>
-        <h1>Browne & Associates Legal Services</h1>
+        <b><p style="font-size:3vw;">Browne & Associates Legal Services</p></b>
       </div>
     </div>
   </div>
