edits to the practice areas

--- a/highway-traffic-act-and-cvor.html
+++ b/highway-traffic-act-and-cvor.html
@@ -112,7 +112,6 @@
 
           <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
           knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
-          <br><br><br><br><br>
           </div>
       </div>
     </div>
@@ -156,26 +155,28 @@
     <div class="row">
       <div class="col-lg-6 offset-6">
         <div class="law_box">
-          <div class="title">
-            <h1>Criminal Convictions <span>Summary Offenses</span></h1>
-          </div>
-          <p>Criminal charges or criminal matters consist of very serious crimes that should not be taken lightly. If convicted of a criminal offence, there is the possibility that you could go to 
-          jail or face a substantial fine. As a Paralegal, I’m able to deal with criminal matters (Summary Convictions), so long as the maximum term of imprisonment does not exceed six months and 
-          $5000.00 in fines. </p>
+          <h1><b><u>HTA Highway Traffic Act:</u></b></h1>
+          <p>You may think that you can just pay your traffic violation and it will go away. This is not entirely true. There are other things to take into consideration, such as your 
+          demerit points on your driving record and a rise in your insurance premiums. Pleading guilty, or bad plea-bargaining can affect your car insurance and your driving record for 
+          years to come. Fight to keep your driving record clean. </p>
+          <br>
+          <h1><b><u>CVOR Commercial Vehicle Operators Registration:</u></b></h1>
+          <p>Here at Reid Paralegal i understand that challenging a ticket can be lengthy, trying and puzzling. That is why I treat every traffic infringement case as exclusive and offer 
+          my expert and specialized services to aid in relieving those stresses. While violations such as unsafe loads, log book violations, improper pre-trip inspections may not lead to 
+          incarceration, but paying the fine is the same as confessing guilt. This will result in CVOR points on your driving record and with enough points accumulated your company could 
+          potentially loose there CVOR which then would lead to lose of employment therefore it is in your best interest to have D. Reid Paralegal help fight your ticket.</p>
+          <br>
+          <p><b>For that reason, I can handle the entire ticket for you:</b></p>
           <ul class="tick">
-            <li>Theft of $5,000.00 or under</li>
-            <li>Breach of Recognizance</li>
-            <li>Dangerous Driving Assault</li>
-            <li>Failure to comply with probation order</li>
-            <li>Operating while Impaired</li>
-            <li>Mischief</li>
-            <li>Assault</li>
-            <li>Harassing phone calls</li>
-            <li>Other</li>
+            <li>The filing of the ticket.</li>
+            <li>All correspondence.</li>
+            <li>Requesting disclosure.</li>
+            <li>Any negotiations.</li>
+            <li>Going to court for you.</li>
+            <li>Load Security.</li>
+            <li>Log Book.</li>
+            <li>Over Weight.</li>
           </ul>
-          <p>However, for indictable offenses, I am unable to represent you in court but I work closely with many different lawyers, in many different areas of law. I would be more than willing to 
-          refer you to one of my trusted lawyers. Knowing that being charged with a criminal matter can have a considerable impact upon you and/or your family, I will try to mitigate the impact by 
-          placing you in contact with the lawyer you need to resolve your matter in a quick and timely manner.</p>
         </div>
       </div>
     </div>
