--- a/provincial-offences.html
+++ b/provincial-offences.html
@@ -89,6 +89,7 @@
 <!--Header End--> 
 
 <!-- About Start -->
+
 <div class="about-wrap" id="about">
   <div class="container">
     <div class="row">
@@ -112,7 +113,6 @@
 
           <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
           knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
-          <br><br><br><br><br>
           </div>
       </div>
     </div>
@@ -157,25 +157,27 @@
       <div class="col-lg-6 offset-6">
         <div class="law_box">
           <div class="title">
-            <h1>Criminal Convictions <span>Summary Offenses</span></h1>
+            <h1>Provincial Offenses</h1>
           </div>
-          <p>Criminal charges or criminal matters consist of very serious crimes that should not be taken lightly. If convicted of a criminal offence, there is the possibility that you could go to 
-          jail or face a substantial fine. As a Paralegal, I’m able to deal with criminal matters (Summary Convictions), so long as the maximum term of imprisonment does not exceed six months and 
-          $5000.00 in fines. </p>
+          <p>If you receive a ticket in Ontario, you are required to pay it through a Provincial Offences office unless you wish to dispute the charges. Common charges under the Provincial Offences Act include:</p>
           <ul class="tick">
-            <li>Theft of $5,000.00 or under</li>
-            <li>Breach of Recognizance</li>
-            <li>Dangerous Driving Assault</li>
-            <li>Failure to comply with probation order</li>
-            <li>Operating while Impaired</li>
-            <li>Mischief</li>
-            <li>Assault</li>
-            <li>Harassing phone calls</li>
-            <li>Other</li>
+          <br><br><br><br>
+            <li><b>Highway Traffic Act Violations (HTA)</b>
+            <p>such as speeding, careless driving, not wearing seatbelt, or failing to stop at a stop sign</p></li>
+            <br>
+            <li><b>Compulsory Automobile Insurance Act (CAIA)</b>
+            <p>such as failing to surrender your insurance card or driving without insurance</p></li>
+            <br>
+            <li><b>Liquor Licence Act (LLA)</b>
+            <p>such as being intoxicated in a public place or having open liquor in your vehicle</p></li>
+            <br>
+            <li><b>Trespass to Property Act (TPA)</b>
+            <p>such as entering premises where prohibited or failing to leave premises after being directed to do so</p></li>
+            <br>
+            <li><b>Municipal By-Laws Infractions</b>
+            <p>such as noise, zoning or parking</p></li>
           </ul>
-          <p>However, for indictable offenses, I am unable to represent you in court but I work closely with many different lawyers, in many different areas of law. I would be more than willing to 
-          refer you to one of my trusted lawyers. Knowing that being charged with a criminal matter can have a considerable impact upon you and/or your family, I will try to mitigate the impact by 
-          placing you in contact with the lawyer you need to resolve your matter in a quick and timely manner.</p>
+          <br><br>
         </div>
       </div>
     </div>
